--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -3,12 +3,35 @@ events {
 }
 
 http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  gzip on;
+  gzip_disable "msie6";
+
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+  gzip_min_length 256;
+  gzip_types
+    application/javascript
+    application/json
+    text/css
+    text/javascript
+    text/plain
+    text/xml;
+
+  sendfile on;
+
   server {
     listen 80;
     listen [::]:80;
 
     root /var/www/html;
     index index.html;
+
 
     location / {
       try_files $uri $uri/ /index.html =404;
